css/style.css
/* ... */
.one-line {
	line-height: 50px;
}
.box-header-num {
	float: left;
	font-weight: 900;
	font-size: 50px;
	color: rgba(235,4,120,1);
	padding: 25px;
	margin-right: 25px;
	border-right: 1px solid rgba(5,187,255,1);
}
.box-header .stop-name {
	display: block;
	padding: 25px;
}

.bold {
	font-weight: 700;
}

.vca-logo-color {
	width: 20%;
	padding-top: 20px;
	display: block;
	margin: 0 auto;
}

/* Specific Article Styles */

#article-roadtrip {
	padding-bottom: 0;
	margin-bottom: -25px;
}
#article-roadtrip .container-fluid.article {
	width: 100%;
	padding-left: 0px;
	padding-right: 0px;
	margin-left: 0px;
	margin-right: 0px;
	max-width: none;
}
#article-roadtrip .col-md-8 {
	text-align: center;
}

#list-roadtrip {
	margin-top: 0px;
}

#article-roadtrip .scroll-list .col-md-6 {
	margin-left: 5%;
	margin-right: 5%;
	position: absolute;
	top: 50%;
	transform: translateY(-50%);
	z-index: +2;
}

.circle-container {
	position: absolute;
	top: 50%;
	transform: translateY(-50%) !important;
	left: 45%;
	width: 40%;
	z-index: +1;
}

.roadtrip-circle {
	display: block;
	background-size: cover;
	width: 100%;
	height: 0;
	padding: 50% 0;
	-moz-border-radius: 50%;
	-webkit-border-radius: 50%;
	border-radius: 50%;
	box-shadow: 0px 0px 0px 8px rgba(235,4,120,1);
	background-image: url(../images/article_roadtrip/map_1.jpg);
	transition: all .5s ease-in-out;
}

.circle-bg-2 {
	background-image: url(../images/article_roadtrip/map_2.jpg);
}

.circle-bg-3 {
	background-image: url(../images/article_roadtrip/map_3.jpg);
}

.circle-bg-4 {
	background-image: url(../images/article_roadtrip/map_4.jpg);
}

.circle-bg-5 {
	background-image: url(../images/article_roadtrip/map_5.jpg);
}

.circle-bg-6 {
	background-image: url(../images/article_roadtrip/map_6.jpg);
}

.circle-bg-7 {
	background-image: url(../images/article_roadtrip/map_7.jpg);
}

#article-surf-skate {
	padding-bottom: 0;
	margin-bottom: -25px;
}
#article-surf-skate .container-fluid.article {
	width: 100%;
	padding-left: 0px;
	padding-right: 0px;
	margin-left: 0px;
	margin-right: 0px;
	max-width: none;
}
#article-surf-skate .col-md-8 {
	text-align: center;
}

#article-surf-skate .col-md-8.col-md-offset-2 p {
	text-align: center;
	max-width: 900px;
	display: inline-block;
	padding-bottom: 0;
}

#article-surf-skate .box-header {
	display: block;
	padding: 25px;
}

#article-surf-skate .box-header .best-for {
	font-size: 20px;
	font-weight: 900;
	text-transform: none;
}

.list-surf-skate {
	padding-bottom: 30%;	
}

#article-surf-skate .scroll-list .col-md-6 {
	position: absolute;
}

#article-surf-skate .scroll-list-box p {
	padding: 25px;
}

.skate-list {
	position: relative;
	overflow: hidden;
}

.surf-skate-title {
	text-align: center;
	position: absolute;
	top: 45px;
	left: 25%;
	transform: translateX(-50%);
	font-size: 20px;
	color: rgba(5,187,255,1);
}

.surf-skate-title-accent {
	text-transform: capitalize;
	font-weight: 700;
}

.static-list {
	position: fixed;
	overflow-y: scroll;
}

/* Camp CA/Listicle Styles */

#camp-ca .scroll-list-box {
	box-shadow: none;
	margin: 80px 0 0 0;
	padding-bottom: 20px;
	position: relative;
	z-index: 1!important;
}

#camp-ca .scroll-list-box .bold {
	color: #1f1f1f;
}

#camp-ca .scroll-list-box .box-header {
	margin-bottom: 6px;
}

#camp-ca .scroll-list-box .text-wrapper {
	padding: 20px 25px 15px;
	clear: both;
}

#camp-ca .scroll-list-box p {
	
	padding: 0 20px 14px 0;
	font-size: 19px;
	line-height: 28px;
	font-weight: 300;
}

#camp-ca .scroll-list-box .camp-ca-bold {
	font-weight: 600;
}


#camp-ca .col-md-6 img {
	box-shadow: 2px 4px 12px rgba(0,0,0,.2);
	margin: -250px 0 0 -10%;
	position: relative;
	z-index: 50!important;
	margin-bottom: 40px;
}

/* Animation Styles */

.animateblock {
  color: #fff;
  opacity: 0;
  -webkit-transition: all 0.55s linear;
  -moz-transition: all 0.55s linear;
  transition: all 0.55s linear;
  z-index: 50!important;
}

.animateblock.animated {
  opacity: 1;
}

/* animation transition styles */
.animateblock.left {
  margin-left: -2%;
}
.animateblock.left.animated {
  margin-left: 12%;
}

.animateblock.right {
  display: block;
  margin-left: 100%;
}
.animateblock.right.animated {
  margin-left: 70%;
}

.animateblock.top {
  display: block;
  width: auto;
  text-align: center;
  margin-top: -25px;
}
.animateblock.top.animated {
  margin-top: 0px;
}

.animateblock.btm {
  display: block;
  width: auto;
  text-align: center;
  margin-top: 25px;
}
.animateblock.btm.animated {
  margin-top: 0;
}

.animateblock.centerleft {
  display: block;
  width: auto;
  text-align: center;
  margin-right: -10%;
}
.animateblock.centerleft.animated {
  margin-right: 0;
}

.animateblock.centerright {
  display: block;
  width: auto;
  text-align: center;
  margin-left: -10%;
}
.animateblock.centerright.animated {
  margin-left: 0;
}

.animateblock.center {
  margin-left: 2%;
}
.animateblock.center.animated {
  margin-left: 42%;
}

.animateblock.size {
  display: block;
  width: 10%;
  text-align: center;
}
.animateblock.size.animated {
  width: 100%;
  height: 100%;
}
.animateblock.size img {
  max-width: 100%;
  height: auto;
}

/* Slideshow/Accordion Styles */

.hideContentWrap {
	background-size: cover;
	background-position: center;
	background-repeat: no-repeat;
	background-color: #05bbff;
	width: 950px;
	margin: 0 auto 1px;
	position: relative;
	text-align: center;
	overflow: hidden;
}
.hideContentWrap .hideContentHeader {
	color: #fff;
	text-transform: uppercase;
	font-weight: 400;
	font-size: 32px;
	letter-spacing: 3px;
	background-color: rgba(5,187,255,.8);
	padding: 25px 25px 22px 25px;
	position:relative;
	z-index: 50!important;
	text-shadow: 0px 2px 4px rgba(0,0,0,.4);
	transition: all .5s ease-in-out;
}
.hideContentWrap .hideContentHeader:hover {
	cursor: pointer;
	letter-spacing: 4px;
	color: #fff845;
}
.hideContentHeader.active {
    background-color: rgba(5,187,255,0);
    text-shadow: 0px 1px 4px rgba(0,0,0,.8);
    color: #fff845;
}
.hideContentHeader.active:hover {
	letter-spacing: 3px;
}
/* ... */

